--- a/views/index.html
+++ b/views/index.html
@@ -2,14 +2,14 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Dateiupload</title>
+    <title>File Upload</title>
 </head>
 <body>
-    <h2>Dateiupload zu GridFS</h2>
+    <h2>File Upload to MongoDB GridFS</h2>
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <label for="file">Wähle eine Datei zum Hochladen:</label>
+        <label for="file">Choose a file to upload:</label>
         <input type="file" id="file" name="file" required>
-        <button type="submit">Hochladen</button>
+        <button type="submit">Upload</button>
     </form>
 </body>
 </html>
